work in progress2

--- a/programmers/lev3q02_지형이동_1015.ipynb
+++ b/programmers/lev3q02_지형이동_1015.ipynb
@@ -233,22 +233,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in land[:, 0]:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1,  5, 10, 10])"
+       "1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "land[:, 0]"
+    "land[:, 0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(land[:, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  4,  8, 10],\n",
+       "       [ 5,  5,  5,  5],\n",
+       "       [10, 10, 10, 10],\n",
+       "       [10, 10, 10, 20]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "land"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "land.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_hor(land, height):  #가로로 그룹핑\n",
+    "    groups = []\n",
+    "    for k in range(land.shape[0]):\n",
+    "        strip = land[k, :]\n",
+    "        temp = [(k, 0)]\n",
+    "        for l in range(1, len(strip)):\n",
+    "            last_num = land[temp[-1]]\n",
+    "            if abs(last_num - strip[l]) <= height:\n",
+    "                temp.append((k, l))\n",
+    "            else:\n",
+    "                groups.append(temp)\n",
+    "                temp = [(k, l)]\n",
+    "        groups.append(temp)\n",
+    "    return groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(0, 0), (0, 1)],\n",
+       " [(0, 2), (0, 3)],\n",
+       " [(1, 0), (1, 1), (1, 2), (1, 3)],\n",
+       " [(2, 0), (2, 1), (2, 2), (2, 3)],\n",
+       " [(3, 0), (3, 1), (3, 2)],\n",
+       " [(3, 3)]]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_hor(land, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_ver(land, height):   #세로로 그룹핑\n",
+    "    groups = []\n",
+    "    for k in range(land.shape[0]):\n",
+    "        strip = land[:, k]\n",
+    "        temp = [(0, k)]\n",
+    "        for l in range(1, len(strip)):\n",
+    "            last_num = land[temp[-1]]\n",
+    "            if abs(last_num - strip[l]) <= height:\n",
+    "                temp.append((l, k))\n",
+    "            else:\n",
+    "                groups.append(temp)\n",
+    "                temp = [(l, k)]\n",
+    "        groups.append(temp)\n",
+    "    return groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(0, 0)],\n",
+       " [(1, 0)],\n",
+       " [(2, 0), (3, 0)],\n",
+       " [(0, 1), (1, 1)],\n",
+       " [(2, 1), (3, 1)],\n",
+       " [(0, 2), (1, 2)],\n",
+       " [(2, 2), (3, 2)],\n",
+       " [(0, 3)],\n",
+       " [(1, 3)],\n",
+       " [(2, 3)],\n",
+       " [(3, 3)]]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_ver(land, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hor_groups = check_hor(land, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (0, 1)]\n",
+      "[(0, 2), (0, 3)]\n",
+      "[(1, 0), (1, 1), (1, 2), (1, 3)]\n",
+      "[(2, 0), (2, 1), (2, 2), (2, 3)]\n",
+      "[(3, 0), (3, 1), (3, 2)]\n",
+      "[(3, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group in hor_groups:\n",
+    "    print(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ver_groups = check_ver(land, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0)]\n",
+      "[(1, 0)]\n",
+      "[(2, 0), (3, 0)]\n",
+      "[(0, 1), (1, 1)]\n",
+      "[(2, 1), (3, 1)]\n",
+      "[(0, 2), (1, 2)]\n",
+      "[(2, 2), (3, 2)]\n",
+      "[(0, 3)]\n",
+      "[(1, 3)]\n",
+      "[(2, 3)]\n",
+      "[(3, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group in ver_groups:\n",
+    "    print(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{(0, 0), (0, 1), (1, 1)},\n",
+       " {(0, 2), (0, 3), (1, 2)},\n",
+       " {(0, 1), (0, 2), (1, 0), (1, 1), (1, 2), (1, 3)},\n",
+       " {(2, 0), (2, 1), (2, 2), (2, 3), (3, 0), (3, 1), (3, 2)},\n",
+       " {(2, 0), (2, 1), (2, 2), (3, 0), (3, 1), (3, 2)},\n",
+       " {(3, 3)}]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concatenated = []\n",
+    "for group_h in hor_groups:\n",
+    "    h = group_h.copy()\n",
+    "    for ele in group_h:\n",
+    "        ver = locate_ele_in_diff_group(ele, ver_group)\n",
+    "        h.extend(ver)\n",
+    "        if ver in ele:   #완전 포함일 경우\n",
+    "            pass\n",
+    "        else:   #새로운 element가 있을 경우\n",
+    "            for ele_v in ver:\n",
+    "                hor = locate_ele_in_di\n",
+    "    concatenated.append(h)\n",
+    "(concatenated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def locate_ele_in_diff_group(ele, diff_groups):\n",
+    "    for group in diff_groups:\n",
+    "        if ele in group:\n",
+    "            return group"
    ]
   },
   {
@@ -256,22 +559,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 0), (3, 0)]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def check_hor(land, height):  #가로로 그룹핑\n",
-    "    groups = []\n",
-    "    for k in land.shape[0]:\n",
-    "        strip = land[k, :]\n",
-    "        \n",
-    "    return groups\n",
-    "\n",
-    "def check_ver(land, height):   #세로로 그룹핑\n",
-    "    groups = []\n",
-    "    for k in land.shape[1]:\n",
-    "        \n",
-    "    return groups\n",
-    "\n",
+    "locate_ele_in_ver_group((2, 0), ver_groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def concat(hor_groups, ver_groups, height):   #가로 세로 그룹 대조해서 그룹 합치기\n",
-    "    concatenated = []\n",
+    "    \n",
+    "    concatenated = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-42-fb64766d6101>, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-fb64766d6101>\"\u001b[0;36m, line \u001b[0;32m19\u001b[0m\n\u001b[0;31m    return groups\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
     "    return concatenated\n",
     "\n",
     "def calc_cost(groups):   #그룹핑 결과로 최소 비용 계산하기\n",
